--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,9 @@
         android:theme="@style/AppTheme">
         <service
             android:name=".RadioStationService"
-            android:exported="false" />
+            android:exported="false">
+        </service>
+
         <service
             android:name=".TitleService"
             android:exported="false" />
