update new stream url

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,18 +3,17 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "lt.radio1.radio1"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.0.3"
+        versionCode 5
+        versionName "1.0.4"
     }
 
     signingConfigs {
         release {
-            storeFile file("../key/radio1-release-key.keystore")
+            storeFile file("../radio1-release-key.keystore")
             keyAlias 'Radio_one'
             storePassword '**'
             keyPassword '**'
